--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,5 +1,5 @@
 checker:
     image:
         name: jokeswar/iocla-3
-    before_script:
-        - echo before_script
+    script:
+        - echo ''
