--- a/checker/task-2/checker/Makefile
+++ b/checker/task-2/checker/Makefile
@@ -1,28 +1,26 @@
-ASM=nasm
-ASMFLAGS=-f elf32
-MAKEFLAGS=--silent
-CC=gcc
-CFLAGS=-m32 -fno-pie -no-pie
+ASM = nasm
+ASMFLAGS = -f elf32
+MAKEFLAGS = --silent
+CC = gcc
+CFLAGS = -m32 -no-pie
+TASKNAME_1 = task2_p1
+TASKNAME_2 = task2_p2
+LDFLAGS = -m32 -no-pie
 
 build: checker
 
 check:
 	./check.sh
 
-checker: checker.o task2_p1.o task2_p2.o
-	$(CC) $(CFLAGS) $^ -o $@
+checker: checker.o $(TASKNAME_1).o $(TASKNAME_2).o
  
-task2_p1.o: task2_p1.asm
-	$(ASM) $(ASMFLAGS) $^
+$(TASKNAME_1).o: ../$(TASKNAME_1).asm
+	$(ASM) $(ASMFLAGS) $^ -o $@
 
-task2_p2.o: task2_p2.asm
-	$(ASM) $(ASMFLAGS) $^
+$(TASKNAME_2).o: ../$(TASKNAME_2).asm
+	$(ASM) $(ASMFLAGS) $^ -o $@
 
 checker.o: checker.c
-	$(CC) -c $(CFLAGS) $^
-
-copy: 
-	if [ -f ../../task2/task2_p1.asm ] && [ -f ../../task2/task2_p2.asm ]; then cp ../../task2/task2_p1.asm ../../task2/task2_p2.asm .; else cp ../task2_p1.asm ../task2_p2.asm .; fi
 
 clean:
 	rm checker *.o
