--- a/checker/task-4/checker/Makefile
+++ b/checker/task-4/checker/Makefile
@@ -3,25 +3,19 @@ CFLAGS = -m32 -no-pie
 ASM = nasm
 ASMFLAGS = -f elf
 TASKNAME = task4
-IMPL = ../../$(TASKNAME)/$(TASKNAME).asm
-SKEL = ../$(TASKNAME).asm
+LDFLAGS = -m32 -no-pie
 
 build: checker
 
 check: 
 	./check.sh
 
-checker: checker.o task4.o
-	$(CC) $(CFLAGS) $^ -o $@
+checker: checker.o $(TASKNAME).o
  
-task4.o: task4.asm
-	$(ASM) $(ASMFLAGS) $^
+$(TASKNAME).o: ../$(TASKNAME).asm
+	$(ASM) $(ASMFLAGS) $^ -o $@
 
 checker.o: checker.c
-	$(CC) -c $(CFLAGS) $^
-
-copy:
-	if [ -f $(IMPL) ]; then cp $(IMPL) .; else cp $(SKEL) .; fi
 
 clean:
-	rm checker *.o *.out
+	rm checker *.o
