--- a/checker/bonus_at&t/checker/Makefile
+++ b/checker/bonus_at&t/checker/Makefile
@@ -1,28 +1,20 @@
-ASM=as
-ASMFLAGS=--32
-CC=gcc
-CFLAGS=-m32 -fno-pie -no-pie
-MAKEFLAGS=--silent
+CC = gcc
+CFLAGS = -m32 -no-pie
+MAKEFLAGS = --silent
 TASKNAME = bonus_at_t
-IMPL = ../../$(TASKNAME)/$(TASKNAME).S
-SKEL = ../$(TASKNAME).S
+LDFLAGS = -m32 -no-pie
 
 build: checker
 
 check:
 	./check.sh
 
-checker: checker.o bonus_at_t.o
-	$(CC) $(CFLAGS) $^ -o $@
+checker: checker.o $(TASKNAME).o
  
-bonus_at_t.o: bonus_at_t.S
-	$(CC) -c $(CFLAGS) $^
+$(TASKNAME).o: ../$(TASKNAME).S
+	$(CC) -c $(CFLAGS) $^ -o $@
 
 checker.o: checker.c
-	$(CC) -c $(CFLAGS) $^
-
-copy:
-	if [ -f $(IMPL) ]; then cp $(IMPL) .; else cp $(SKEL) .; fi
 
 clean:
 	rm checker *.o
