--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,7 @@ checker/*/checker/*.out
 checker/*/checker/tests/out/*.out
 checker/*/checker/*.o
 checker/*/checker/checker
+checker/*/checker/.*
+refs/*
+.vscode/*
+checker/.*
