--- a/checker/bonus_floating_point/checker/Makefile
+++ b/checker/bonus_floating_point/checker/Makefile
@@ -1,10 +1,10 @@
 CC = gcc
-CFLAGS = -m32 -no-pie
+CFLAGS = -m32 -no-pie -fno-pie -g
 ASM = nasm
 ASMFLAGS = -f elf
 MAKEFLAGS= --silent
 TASKNAME = bonus_floating_point
-LDFLAGS = -m32 -no-pie
+LDFLAGS = -m32 -no-pie -fno-pie
 
 build: checker
 
