--- a/checker/task-1/checker/Makefile
+++ b/checker/task-1/checker/Makefile
@@ -1,10 +1,10 @@
 CC = gcc
-CFLAGS = -m32 -g -no-pie
+CFLAGS = -m32 -g -no-pie -fno-pie -g
 ASM = nasm
 ASMFLAGS = -f elf32
 MAKEFLAGS += --silent
 TASKNAME = task1
-LDFLAGS = -m32 -no-pie
+LDFLAGS = -m32 -no-pie -fno-pie
 
 checker: checker.o $(TASKNAME).o
 
